--- a/app/src/main/res/layout/act_organizinglife.xml
+++ b/app/src/main/res/layout/act_organizinglife.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tl="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:orientation="vertical"
-    tools:context=".ui.activity.fgt.home.act.Act_PartyBuildingMatrix">
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -44,53 +40,66 @@
             android:src="@mipmap/img_search" />
     </RelativeLayout>
 
-    <LinearLayout
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dip_50"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dip_50"
+                    android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_title1"
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:drawablePadding="@dimen/dip_5"
-            android:textSize="@dimen/fond_16sp"
-            android:gravity="center"
-            android:padding="@dimen/dip_10"
-            android:text="全部"
-            android:textColor="@drawable/signin_fond_selecte" />
+                    <TextView
+                        android:id="@+id/tv_title1"
+                        android:layout_width="0dip"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:drawablePadding="@dimen/dip_5"
+                        android:gravity="center"
+                        android:padding="@dimen/dip_10"
+                        android:text="全部"
+                        android:textColor="@drawable/signin_fond_selecte"
+                        android:textSize="@dimen/fond_16sp" />
 
-        <TextView
-            android:id="@+id/tv_title2"
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:drawablePadding="@dimen/dip_5"
-            android:gravity="center"
-            android:padding="@dimen/dip_10"
-            android:textSize="@dimen/fond_16sp"
-            android:text="主题分类"
-            android:textColor="@drawable/signin_fond_selecte" />
-        <TextView
-            android:id="@+id/tv_title3"
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:drawablePadding="@dimen/dip_5"
-            android:gravity="center"
-            android:padding="@dimen/dip_10"
-            android:textSize="@dimen/fond_16sp"
-            android:text="按时间排序"
-            android:textColor="@drawable/signin_fond_selecte" />
-    </LinearLayout>
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp"
-        android:background="@color/white"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+                    <TextView
+                        android:id="@+id/tv_title2"
+                        android:layout_width="0dip"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:drawablePadding="@dimen/dip_5"
+                        android:gravity="center"
+                        android:padding="@dimen/dip_10"
+                        android:text="主题分类"
+                        android:textColor="@drawable/signin_fond_selecte"
+                        android:textSize="@dimen/fond_16sp" />
+
+                    <TextView
+                        android:id="@+id/tv_title3"
+                        android:layout_width="0dip"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:drawablePadding="@dimen/dip_5"
+                        android:gravity="center"
+                        android:padding="@dimen/dip_10"
+                        android:text="按时间排序"
+                        android:textColor="@drawable/signin_fond_selecte"
+                        android:textSize="@dimen/fond_16sp" />
+                </LinearLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/my_RecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+        </ScrollView>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 </LinearLayout>
