--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,6 +35,7 @@
     <color name="green">#22ab38</color>
     <color name="txtColor">#757575</color>
     <color name="yellow">#FCAB26</color>
+    <color name="transparent">#00000000</color>
     <color name="pink">#FFE4E4</color>
     <color name="grey_200">#eeeeee</color>
 </resources>
