--- a/app/src/main/res/layout/act_styleofforestarea.xml
+++ b/app/src/main/res/layout/act_styleofforestarea.xml
@@ -43,64 +43,14 @@
             android:scaleType="fitXY"
             android:src="@mipmap/img_search" />
     </RelativeLayout>
-
-    <LinearLayout
+    <com.flyco.tablayout.SlidingTabLayout
+        android:id="@+id/tl_4"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dip_50"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_title1"
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:drawablePadding="@dimen/dip_5"
-            android:textSize="@dimen/fond_16sp"
-            android:gravity="center"
-            android:singleLine="true"
-            android:padding="@dimen/dip_10"
-            android:text="优秀党组织"
-            android:textColor="@drawable/signin_fond_selecte" />
-        <TextView
-            android:id="@+id/tv_title2"
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:drawablePadding="@dimen/dip_5"
-            android:gravity="center"
-            android:padding="@dimen/dip_10"
-            android:singleLine="true"
-            android:textSize="@dimen/fond_16sp"
-            android:text="优秀党务工作者"
-            android:textColor="@drawable/signin_fond_selecte" />
-        <TextView
-            android:id="@+id/tv_title3"
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:drawablePadding="@dimen/dip_5"
-            android:gravity="center"
-            android:singleLine="true"
-            android:padding="@dimen/dip_10"
-            android:textSize="@dimen/fond_16sp"
-            android:text="优秀共产党"
-            android:textColor="@drawable/signin_fond_selecte" />
-        <TextView
-            android:id="@+id/tv_title4"
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:singleLine="true"
-            android:padding="@dimen/dip_10"
-            android:textSize="@dimen/fond_16sp"
-            android:text="优秀党建联络员"
-            android:textColor="@drawable/signin_fond_selecte" />
-    </LinearLayout>
+        android:layout_height="48dp"
+        android:background="@color/white"
+        app:tl_textSelectColor="#E24B1D"
+        app:tl_textUnselectColor="#50000000"
+        tl:tl_textsize="@dimen/fond_14sp" />
     <android.support.v4.view.ViewPager
         android:id="@+id/vp"
         android:background="@color/white"
