增加新得体会

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="red2">#FE0C2A</color>
     <color name="red3">#E24B1D</color>
     <color name="black2">#8F8F8F</color>
+    <color name="red4">#F08713</color>
     <!--横线-->
     <color name="backLine">#D6D6D6</color>
     <!-- 海军色 -->
