--- a/app/src/main/res/layout/act_learningexperience.xml
+++ b/app/src/main/res/layout/act_learningexperience.xml
@@ -31,15 +31,32 @@
             android:textSize="19dp"
             android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/imgSearch"
-            android:layout_width="40dp"
-            android:layout_height="38dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="32dp"
-            android:padding="10dp"
-            android:scaleType="fitXY"
-            android:src="@mipmap/img_search" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgSearch"
+                android:layout_width="40dp"
+                android:layout_height="38dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="32dp"
+                android:padding="10dp"
+                android:scaleType="fitXY"
+                android:src="@mipmap/img_search" />
+            <ImageView
+                android:id="@+id/item_show"
+                android:layout_width="wrap_content"
+                android:paddingBottom="@dimen/dip_3"
+                android:paddingLeft="@dimen/dip_5"
+                android:paddingRight="@dimen/dip_10"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:src="@mipmap/icon_show" />
+        </LinearLayout>
+
     </RelativeLayout>
 
     <LinearLayout
@@ -72,6 +89,7 @@
             android:text="党总支"
             android:textColor="@drawable/signin_fond_selecte"
             android:textSize="@dimen/fond_16sp" />
+
         <TextView
             android:id="@+id/tv_title3"
             android:layout_width="0dip"
@@ -84,6 +102,7 @@
             android:text="党支部"
             android:textColor="@drawable/signin_fond_selecte"
             android:textSize="@dimen/fond_16sp" />
+
         <TextView
             android:id="@+id/tv_title4"
             android:layout_width="0dip"
@@ -97,6 +116,7 @@
             android:textColor="@drawable/signin_fond_selecte"
             android:textSize="@dimen/fond_16sp" />
     </LinearLayout>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/vp"
         android:layout_width="match_parent"
